Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.55.00

              libnetpbm: pm_system(): fix bug - program always takes
              Standard Input from invoker's Standard Input when you don't
              supply a Standard Output accepter.  Broken in 10.40.00.

              ppmtopbm: fix bug: crash ("internal error") on image without
              palette (e.g. black and white).  Broken in 10.54.

11.03.30 BJH  Release 10.54.00

              Add pamrubber.  Thanks Willem van Schaik <willem@schaik.com>.

              Add ppmtoapplevol.  Thanks Matthew Garrett
              <mjg59@srcf.ucam.org>.

              Add pamwipeout.  Thanks Willem van Schaik <willem@schaik.com>.

              pngtopam: add -byrow.

              pnmtopclxl: add -embedded.

              pgmtoascii: Truncates instead of undefined behavior if input
              image is wider than specified width.

              Add libpamd (PAM version of classic libppmd drawing routines).

              Rename pbmtoicon to pbmtosunicon, to go with change
              of icontopbm to sunicontopnm in 10.53.

              g3topbm: correct error message: codes go up to 13 bits.

              pamstereogram: fix crash when not doing texture.

              pgmtoascii: Fix numerous output bugs.

              pngtopam: fix bug: -verbose reports history chunk present when
              it's really a palette.

              pnmpsnr: fix bug: says PGM images differ when they don't
              and vice versa.

10.12.30 BJH  Release 10.53.00

              Add pammosaicknit.  Thanks Scott Pakin.

              pnmtops: Add -textalphabits, default Postscript TextAlphaBits
              to 4.

              pngtopam: include tuple type in output.  Thanks
              Thomas Henlich <thenlich@users.sourceforge.net>.

              sunicontopnm: Understands Depth=8.  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.
